# django-signalcontrol

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml
docs/: django_settings.py
docs/source/: about.md  about.rst  conf.py  features.md  features.rst  index.md  index.rst  installation.md  installation.rst  internals.md  internals.rst  version_history.md  version_history.rst
signal_control_tests/signal_control_tests/: urls.py
signal_control_tests/signalcontrol/: apps.py
signalcontrol/: __init__.py  admin.py  decorators.py  models.py
signalcontrol/migrations/: 0001_initial.py
signalcontrol/scripts/: scan_signals.py
signalcontrol_tests/: list_all_model_signals.py  manage.py
signalcontrol_tests/controls/: __init__.py  apps.py  signals.py
signalcontrol_tests/controls/migrations/: 0001_initial.py  0002_signalcontrol.py  0003_auto_20200418_0140.py
signalcontrol_tests/signalcontrol_tests/: settings.py  urls.py  wsgi.py
src/djangoaddicts/core/: settings.py  urls.py
src/djangoaddicts/signalcontrol/: admin.py  apps.py  decorators.py  models.py
src/signal_control_tests/: manage.py
src/signal_control_tests/local_test/: settings.txt  signals.py  test.py
src/signal_control_tests/signal_control_tests/: __init__.py  apps.py  settings.py  wsgi.py
src/signal_control_tests/test_app/: apps.py  models.py  signals.py
src/signalcontrol/: __init__.py  admin.py  apps.py  decorators.py  models.py
src/signalcontrol/migrations/: 0001_initial.py  0002_auto_20200618_1611.py  0003_alter_signalcontrol_id.py
src/test_project/test_app_1/: __init__.py  admin.py  apps.py  models.py  signals.py
tests/core/: settings.py  wsgi.py
tests/core/testapp/: apps.py  (+1 more)
tests/unit/: test_admin.py  test_decorators.py  test_model_crud.py  test_model_methods.py
userextensions/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
userextensions/migrations/: 0001_initial.py  0002_userpreference_start_page.py  0003_auto_20200117_2153.py
userextensions/templatetags/: userextension_tags.py
userextensions/views/: __init__.py  action.py  ajax.py  gui.py
userextensions_tests/: manage.py
userextensions_tests/userextensions_tests/: __init__.py  apps.py  settings.py  urls.py  wsgi.py
userprofile/: __init__.py  admin.py  apps.py  middleware.py  models.py  signals.py
userprofile/migrations/: 0001_initial.py
(+23 files in other folders)
