[metadata]
author = David Slusser
author_email = dbslusser@gmail.com
description =
home_page = https://github.com/davidslusser/django-signalcontrol
name = django-signalcontrol

description_content_type = text/x-rst; charset=UTF-8
description_file = README.md
license = GNU
platform = any

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src

install_requires =
    django

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

tests_require =
    pytest-env
    pytest-django
    model-bakery
    pytest

[options.extras_require]
dev =
    bandit~=1.7
    black~=22.3
    build~=0.8
    flake9
    mypy
    pylint~=2.14
    pytest~=7.1
    pytest-cov~=3.0

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc
    test

[bdist_wheel]
universal = 1

[flake8]
ignore = E203,E266,H106,H904,E133
max-line-length = 120
max-complexity = 25
hang-closing = true
